# Photo-fortnight

./: Dockerfile  README.md  build_instructions.txt  docker-compose.yml  main.py  pyproject.toml  upload_decisions.jsonl  users.json
staging/: digital-passport-photo-walgreens.jpg.meta.json
templates/: admin_dashboard.html  home.html  login.html  register.html  staging_review.html  staging_review_1.html  upload.html
