[project]
name = "photo-fortnight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "clamd>=1.0.2",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "openai>=1.76.2",
    "pillow>=11.2.1",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]
